--- a/microservicesParent/inventory-service/src/main/resources/application.properties
+++ b/microservicesParent/inventory-service/src/main/resources/application.properties
@@ -3,6 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
-
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8082
