--- a/microservicesParent/order-service/src/main/resources/application.properties
+++ b/microservicesParent/order-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
 
