--- a/microservicesParent/inventory-service/src/main/resources/application.properties
+++ b/microservicesParent/inventory-service/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8082
+server.port=0
+
+# Eureka Discovery Server endpoint
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=inventory-service
