--- a/microservicesParent/order-service/src/main/resources/application.properties
+++ b/microservicesParent/order-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
 
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=order-service
