--- a/microservicesParent/api-gateway/src/main/resources/application.properties
+++ b/microservicesParent/api-gateway/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 
 # Register Api Gateway as an Eureka Discovery Client
-eureka.client.serviceUrl.defaultZone=http://locahost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
+
+## Product Service Route
+
+spring.cloud.gateway.routes[0].id=product-service
+
+# Add load balancing (lb:) + 1st route
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
+
+## Order Service Route
+
+# Add load balancing (lb:) + 2nd route
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
 
