--- a/microservicesParent/product-service/src/main/resources/application.properties
+++ b/microservicesParent/product-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 
+server.port=0
+
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
