--- a/microservicesParent/inventory-service/src/main/resources/application.properties
+++ b/microservicesParent/inventory-service/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
 
 # Eureka Discovery Server endpoint
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=inventory-service
